Cambiado nombre y añadido icono

--- a/custom_components/euskalmet/manifest.json
+++ b/custom_components/euskalmet/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "euskalmet",
-  "name": "Euskalmet Hassio",
+  "name": "Euskalmet",
   "codeowners": [],
   "config_flow": true,
   "documentation": "https://opendata.euskadi.eus/api-euskalmet/",
